syntax = "proto3";

import "google/protobuf/empty.proto";

service LeaseService {
	rpc RequestLease(LeaseRequest) returns (google.protobuf.Empty);
}

message LeaseRequest  {
	string transactionManagerId = 1;
	repeated string keys = 2;
}

message LeaseResponse {
	int32 epoch = 1;
	repeated Lease leases = 2;
}

message Lease {
	string transactionManagerId = 1;
	repeated string keys = 2;
}